--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,3 +1,45 @@
-<p>
-  about works!
-</p>
+<div class="container d-flex">
+  <div class="icons justify-content-center align-self-center w-100">
+    <div class="row-mt-3">
+      <div class="col-md-12 text-center">
+        <h4>
+          Personal Tech Blog of Lennart Grosser.
+        </h4>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col-md-4 text-center">
+        <a title="AWS Beanstalk + S3 + Cloudfront + CodePipeline" href="https://aws.amazon.com/" target="_blank">
+          <i class="fab fa-aws fa-7x"></i>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a title="Node.js" href="https://nodejs.org/" target="_blank">
+        <i class="fab fa-node-js fa-7x"></i>
+      </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a title="Angular" href="https://angular.io/" target="_blank">
+        <i class="fab fa-angular fa-7x"></i>
+        </a>
+      </div>
+    </div>
+    <div class="row mt-3">
+      <div class="col-md-4 text-center">
+        <a title="Mongo DB" href="https://www.mongodb.com/" target="_blank">
+        <i class="fas fa-database fa-7x"></i>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a title="Bootstrap" href="https://getbootstrap.com/" target="_blank">
+        <i class="fab fa-bootstrap fa-7x"></i>
+        </a>
+      </div>
+      <div class="col-md-4 text-center">
+        <a title="Github" href="https://github.com/" target="_blank">
+        <i class="fab fa-github fa-7x"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
