--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="menubar-container">
+<!--div class="menubar-container">
   <button (click)="homeClick()">
     home
   </button>
@@ -17,4 +17,33 @@
     login
   </button>
 </div>
+-->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <li class="nav-item home">
+        <a class="nav-link " (click)="homeClick()" [ngClass]="{'active': onPage('home')}">Home</a>
+      </li>
+      <li class="nav-item blog">
+        <a class="nav-link" (click)="blogClick()" [ngClass]="{'active': onPage('blog')}">Blog</a>
+      </li>
+      <li class="nav-item about">
+        <a class="nav-link" (click)="aboutClick()" [ngClass]="{'active': onPage('about')}">About</a>
+      </li>
+      <li class="nav-item post" *ngIf="isLoggedIn">
+          <a class="nav-link" (click)="postClick()" [ngClass]="{'active': onPage('post')}">Post</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <router-outlet></router-outlet>
+<div class="login-bar">
+    <input placeholder="username" [(ngModel)]="loginData.username" />
+  <input placeholder="password" [(ngModel)]="loginData.password" />
+  <button (click)="login()">
+    login
+  </button>
+</div>
