--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,3 +1,5 @@
-<p>
-  blog works!
-</p>
+<div class="postContainer">
+  <div *ngFor="let post of posts" class="ql-content">
+      <div [innerHTML]="post.content" class="article"></div>
+  </div>
+</div>
