--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,44 +1,84 @@
-<div class="container d-flex">
-  <div class="icons justify-content-center align-self-center w-100">
-    <div class="row-mt-3">
+<div class="container">
+  <div class="icons">
+    <div class="row mt-5">
       <div class="col-md-12 text-center">
         <h4>
           Personal Tech Blog of Lennart Grosser.
         </h4>
       </div>
     </div>
-    <div class="row mt-3">
-      <div class="col-md-4 text-center">
+    <div class="row mt-5">
+      <div class="col-md-12 text-left">
+        <p>
+          Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+          dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
+          clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet,
+          consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+          sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+          sea
+          takimata sanctus est Lorem ipsum dolor sit amet.
+        </p>
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-md-12 text-center">
+        <h4>
+          This blog was built with:
+        </h4>
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-sm-4 text-center">
         <a title="AWS Beanstalk + S3 + Cloudfront + CodePipeline" href="https://aws.amazon.com/" target="_blank">
-          <i class="fab fa-aws fa-7x"></i>
+          <i class="fab fa-aws fa-5x"></i>
         </a>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-sm-4 text-center">
         <a title="Node.js" href="https://nodejs.org/" target="_blank">
-        <i class="fab fa-node-js fa-7x"></i>
-      </a>
+          <i class="fab fa-node-js fa-5x"></i>
+        </a>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-sm-4 text-center">
         <a title="Angular" href="https://angular.io/" target="_blank">
-        <i class="fab fa-angular fa-7x"></i>
+          <i class="fab fa-angular fa-5x"></i>
         </a>
       </div>
     </div>
-    <div class="row mt-3">
-      <div class="col-md-4 text-center">
+    <div class="row mt-5">
+      <div class="col-sm-4 text-center">
         <a title="Mongo DB" href="https://www.mongodb.com/" target="_blank">
-        <i class="fas fa-database fa-7x"></i>
+          <i class="fab fa-envira fa-5x"></i>
         </a>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-sm-4 text-center">
         <a title="Bootstrap" href="https://getbootstrap.com/" target="_blank">
-        <i class="fab fa-bootstrap fa-7x"></i>
+          <i class="fab fa-bootstrap fa-5x"></i>
         </a>
       </div>
-      <div class="col-md-4 text-center">
+      <div class="col-sm-4 text-center">
         <a title="Github" href="https://github.com/" target="_blank">
-        <i class="fab fa-github fa-7x"></i>
+          <i class="fab fa-github fa-5x"></i>
         </a>
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-lg-12 text-center">
+        <h4>
+          Contact:
+        </h4>
+      </div>
+    </div>
+    <div class="row mt-5">
+      <div class="col-lg-12 text-center">
+          <a href="mailto:lennart.grosser@web.de" target="_blank" class="contact-item">
+            <i class="fas fa-envelope fa-2x"></i>
+          </a>
+          <a href="https://github.com/lenngro" target="_blank" class="contact-item">
+            <i class="fab fa-github fa-2x"></i>
+          </a>
+          <a href="https://kaggle.com/lucidlenn" target="_blank" class="contact-item">
+            <i class="fab fa-kaggle fa-2x"></i>          
+          </a>
       </div>
     </div>
   </div>
