--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,10 @@
-<!--div class="menubar-container">
-  <button (click)="homeClick()">
-    home
-  </button>
-  <button (click)="blogClick()">
-    blog
-  </button>
-  <button (click)="aboutClick()">
-    about
-  </button>
-  <button (click)="postClick()" *ngIf="isLoggedIn">
-      post
-  </button>
-  <input placeholder="username" [(ngModel)]="loginData.username" />
-  <input placeholder="password" [(ngModel)]="loginData.password" />
-  <button (click)="login()">
-    login
-  </button>
-</div>
--->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+    aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
   <div class="collapse navbar-collapse" id="navbarNavDropdown">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav navbar-center">
       <li class="nav-item home">
         <a class="nav-link " (click)="homeClick()" [ngClass]="{'active': onPage('home')}">Home</a>
       </li>
@@ -34,16 +15,28 @@
         <a class="nav-link" (click)="aboutClick()" [ngClass]="{'active': onPage('about')}">About</a>
       </li>
       <li class="nav-item post" *ngIf="isLoggedIn">
-          <a class="nav-link" (click)="postClick()" [ngClass]="{'active': onPage('post')}">Post</a>
+        <a class="nav-link" (click)="postClick()" [ngClass]="{'active': onPage('post')}">Post</a>
       </li>
     </ul>
   </div>
+  <div>
+    <form (keydown)="keyDownFunction($event)">
+      <input #password placeholder="password" class="form-control form-control-sm" type="password"
+        [(ngModel)]="loginData.password" name="password" />
+    </form>
+  </div>
 </nav>
 <router-outlet></router-outlet>
-<div class="login-bar">
-    <input placeholder="username" [(ngModel)]="loginData.username" />
-  <input placeholder="password" [(ngModel)]="loginData.password" />
-  <button (click)="login()">
-    login
-  </button>
-</div>
+<!--footer class="footer w-100" *ngIf="!isLoggedIn">
+  <nav class="navbar navbar-expand-lg bg-transparent w-100 justify-content-center">
+    <form (keydown)="keyDownFunction($event)">
+      <input placeholder="username" class="form-control form-control-sm" type="text" [(ngModel)]="loginData.username"
+        name="username" />
+    </form>
+    <form (keydown)="keyDownFunction($event)">
+      <input #password placeholder="password" class="form-control form-control-sm" type="password"
+        [(ngModel)]="loginData.password" name="password" />
+    </form>
+  </nav>
+</footer>
+-->
