--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,13 @@
 * {
     font-family: 'Roboto', sans-serif;
   }
-  
+  .navbar {
+    height: 65px;
+  }
+  @media (min-width: 768px) {
+    .navbar-nav.navbar-center {
+      position: absolute;
+      left: 50%;
+      transform: translatex(-50%);
+    }
+  }
