added resolver and ngrx store

--- a/src/app/blog/article/article.component.html
+++ b/src/app/blog/article/article.component.html
@@ -1,3 +1,9 @@
-<p>
-  article works!
-</p>
+<div class="container">
+  <div class="title">
+    {{post.title}}
+  </div>
+  <div #postBody>
+    placeholder
+  </div>
+  
+</div>
