--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,10 @@
-<p>
-  YOU REACHED HOME! Congrats.
-</p>
+<div class="pageContainer">
+  <div class="header">
+    <h2>
+      Welcome to argmax.info.
+    </h2>
+  </div>
+  <div class="gifContainer center">
+    <img src="assets/gifs/space_swirl_slow.gif" alt="space" width="250" class="shadow">
+  </div>
+</div>
